--- a/css/index.css
+++ b/css/index.css
@@ -8,14 +8,18 @@ body {
 	height:1000px;
 }
 
+h1 {
+
+}
+
 #maintext {
 	width: 30%;
     background-color: #9e9e9e;
 	position: absolute;
 	overflow: hidden;
-	right:5%;
+	right:0%;
 	top:0;
-    opacity:.4;
+    opacity:.7;
 }
 
 
