--- a/css/base.css
+++ b/css/base.css
@@ -1,15 +1,6 @@
-
-
-
 p, body, #maintext, #about_me {
   padding: 15px;
-  text-align: left;
-  color: #111111;
   background-color: #F9F9F9;
-  text-decoration: none;
-  font-size: 20px;
-  font-weight: 550;
-  font-family: 'Roboto', sans-serif;
 }
 
 body {
@@ -22,64 +13,57 @@ body {
     height: 1000px;
 }
 
-#maintext {
-  display:table;
-  height:100vh;
-  width: 90%;
-  transition: margin-left 1.5s;
-  margin-left: 50px;
-  width:30%;
-  background-color: #9e9e9e;
-  position: absolute;
-  overflow: hidden;
-  right: 0%;
-  top: 0;
-  opacity:.7;
-}
-
-#about_me{
-  display:table;
-  height:100vh;
-  width: 90%;
-  transition: margin-left 1.5s;
-  margin-left: 50px;
-  width:50%;
-  background-color: #9e9e9e;
-  position: absolute;
-  overflow: hidden;
-  right: 0%;
-  top: 0;
-  opacity:.7;
-}
-
-#footer {
-  margin-bottom: 0;
-  bottom:0;
+h1 {
+    padding: 6px 6px 6px 32px;
+    font-family: 'Oswald', sans-serif;
+    font-weight: 800;
+    color: #000000;
+    font-size:23px;
+    letter-spacing: .1px;
+    opacity:1;
 }
 
 img {
-  display: inline-block;
+    display: inline-block;
 }
 
-h1 {
-  padding: 6px 6px 6px 32px;
-  font-family: 'Oswald', sans-serif;
-  font-weight: 800;
-  color: #000000;
-  font-size:23px;
-  letter-spacing: .1px;
-  opacity:1;
+#mainbar {
+    display: flex;
+    align-items: center;
+    height:100vh;
+    margin-left:50 px;
+    width: 30%;
+    background: rgba(158, 158, 158, .7);
+    position:absolute;
+    overflow:hidden;
+    right: 0%;
+    top: 0%;
+    color: #0000000;
+    text-decoration: none;
+    text-align: left;
+    font-size:21px;
+}
+
+#maintext {
+    visibility:visible;
+    background: rgba(158, 158, 158, 0);
+    position:absolute;
+}
+
+#about_me{
+    visibility:hidden;
+    background: rgba(158, 158, 158, 0);
+    position:absolute;
 }
 
 .sidenav {
     height: 100%;
     width: 10%;
     position: fixed;
+    background: rgba(158, 158, 158, .7);
     z-index: 1;
     top: 0;
     left: 0;
-    background-color: #9e9e9e;
-    opacity:.7;
     padding-top: 60px;
 }
 
@@ -88,13 +72,13 @@ h1 {
     text-decoration:none;
     font-size: 18px;
     color: #000000;
-    opacity:1;
+    text-decoration: none;
+    font-size: 20px;
     display: block;
 }
 
 .sidenav a:hover {
     color: #f1f1f1;
+    cursor:pointer;
 }
-
-
 </style>
