--- a/css/base.css
+++ b/css/base.css
@@ -29,31 +29,38 @@ img {
 
 #mainbar {
     display: flex;
+    position:absolute;
+    overflow:hidden;
     align-items: center;
     height:100vh;
     margin-left:50 px;
     width: 30%;
-    background: rgba(158, 158, 158, .7);
-    position:absolute;
-    overflow:hidden;
     right: 0%;
     top: 0%;
+    background: rgba(158, 158, 158, .7);
     color: #0000000;
     text-decoration: none;
     text-align: left;
     font-size:21px;
+    transition: width 1s ease;
 }
 
 #maintext {
     visibility:visible;
     background: rgba(158, 158, 158, 0);
     position:absolute;
+    transition: opacity .5s ease;
 }
 
 #about_me{
-    visibility:hidden;
+    visibility: hidden;
     background: rgba(158, 158, 158, 0);
+    opacity:0;
     position:absolute;
+    -webkit-transition: opacity 4s ease;
+    -moz-transition: opacity 4s ease;
+    -o-transition: opacity 4s ease;
+    transition: opacity 4s ease;
 }
 
 .sidenav {
