--- a/css/agency.css
+++ b/css/agency.css
@@ -243,7 +243,7 @@ header.contact-masthead {
 header.repertoire-masthead {
   text-align: center;
   color: white;
-  background-image: url("../img/repertoire-bg-1.jpg");
+  background-image: url("../img/repertoire-bg.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center center;
