--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: "Open Sans", Arial, sans-serif;
-  font-weight: 400;
+  font-weight: 500;
   font-size: 15px;
   line-height: 1.8;
   color: #b3b3b3;
@@ -20,9 +20,13 @@ a:hover {
   color: #0984e3;
 }
 
-h1, h2, h3, h4, h5 {
+h1, h2, h4, h5 {
   color: #000;
   font-family: "Playfair Display", times, serif;
+}
+
+h3 {  
+  color: #000;
 }
 
 header {
