--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ main {
 }
 
 .column {
-  float: left;
+  float: right;
   width: 50%;
   height: 100%;
   padding: 20px;
@@ -64,3 +64,22 @@ main {
   clear: both;
 }
 
+/* All Mobile Sizes (devices and browser) */
+@media only screen and (max-width: 767px) {
+    img {
+        height: 150px;
+    }
+
+     .center {
+      margin: auto;
+      width: 100%;
+      padding: 10px;
+    }
+
+    .column {
+      float: right;
+      width: 100%;
+      height: 100%;
+      padding: 20px;
+    }   
+}
