--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,8 @@ body {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.8;
-  color: #b3b3b3;
-  background: #fff;
+  color: #8a8a8a;
+  background: #f7f7f7;
 }
 
 a {
@@ -39,7 +39,7 @@ header {
 
 main {
   float: center;
-  padding: 7%;
+  padding: 5%;
   position: relative;
   padding-bottom: 50px;
   margin: auto
