--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,7 @@ main {
   clear: both;
 }
 
-.img {
+img {
     height: 425px;
     box-shadow: 10px 10px 3px #ccc;
     -moz-box-shadow: 10px 10px 5px #ccc;
@@ -79,7 +79,7 @@ main {
 
 /* All Mobile Sizes (devices and browser) */
 @media only screen and (max-width: 800px) {
-    .img {
+    img {
         height: 200px;
         box-shadow: 10px 10px 3px #ccc;
         -moz-box-shadow: 10px 10px 5px #ccc;
