--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,8 @@ body {
   font-size: 16px;
   line-height: 1.8;
   color: #8a8a8a;
-  background: #fafafa;
+/*  background: #fafafa;*/
+  background: #F7F2ED;
 }
 
 a {
@@ -79,6 +80,7 @@ img {
     -moz-box-shadow: 10px 10px 5px #ccc;
     -webkit-box-shadow: 10px 10px 5px #ccc;
     -khtml-box-shadow: 10px 10px 5px #ccc;
+    margin: 30px;
 }
 
 /* All Mobile Sizes (devices and browser) */
@@ -89,6 +91,7 @@ img {
         -moz-box-shadow: 10px 10px 5px #ccc;
         -webkit-box-shadow: 10px 10px 5px #ccc;
         -khtml-box-shadow: 10px 10px 5px #ccc;
+    margin: 30px;
     }
 
      .center {
