--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,8 @@ body {
   line-height: 1.8;
   color: #8a8a8a;
 /*  background: #fafafa;*/
-  background: #F7F2ED;
+  /*background: #F7F2ED;*/
+  background: #fafafa;
 }
 
 a {
